--- a/acrofestival/templates/pages/urbanacro/map-settings1.json
+++ b/acrofestival/templates/pages/urbanacro/map-settings1.json
@@ -1,6 +1,6 @@
 {
 	"mapZoom": 15,
-	"markerAddress": "Flurstrasse 85, 8047 Zurich",
+	"markerAddress": "Holenstrasse 47, 8047 Zurich",
 	"relativeOffset": true,
 	"offsetX": 13,
 	"offsetY": 6
