pre removal of tinycontent

--- a/acrofestival/static/urbanacro/map-settings.json
+++ b/acrofestival/static/urbanacro/map-settings.json
@@ -1,6 +1,6 @@
 {
 	"mapZoom": 15,
-	"markerAddress": "Flurstrasse 85, 8047 Zürich",
+	"markerAddress": "Hohlstrasse 256, 8004 Zürich",
 	"offsetX": 100,
 	"offsetY": 10
 }
