--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ django-tinycontent = "==0.9.0"
 pillow = "==11.2.1"
 django = "==4.2.23"
 pyyaml = "==6.0.2"
+gitpython = "*"
 
 [dev-packages]
 ipdb = ">=0.13.13"
