Update winteracro content via web editor
Edited by: adux (adrian@acrolama.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -51,13 +51,13 @@ winter_accomodation_upgrade2: "The training space offers enough room for some pe
 winter_acro_header_location: <h2><b>Winter Acro Arosa</b></h2>
 winter_general_date: 22. February - 1. March  2025
 winter_general_fb: https://www.facebook.com/events/684181852070040/
-winter_general_title: 7th Winter Acro Festival
+winter_general_title: 8th Winter Acro Festival
 winter_general_whatsapp: <a href="https://chat.whatsapp.com/HFTYA44B5GmJljVFb7vwLG">Winteracro2024</a>
 winter_hall_address_url: https://maps.app.goo.gl/wFy8K6gaSt7ojHde6
-winter_hall_description: "The Halle Arosa is the main indoor venue, offering a spacious,\
-  \ heated \"triple hall\" with a stage, providing the perfect environment for all\
-  \ Winter Acro Festival activities. Lunch and dinner will be served here for all\
-  \ participants, creating a central space for both practice and socializing.<br><br>\r\
+winter_hall_description: "TEST. The Halle Arosa is the main indoor venue, offering\
+  \ a spacious, heated \"triple hall\" with a stage, providing the perfect environment\
+  \ for all Winter Acro Festival activities. Lunch and dinner will be served here\
+  \ for all participants, creating a central space for both practice and socializing.<br><br>\r\
   \nWhile parking at the hall is limited, paid parking options are available just\
   \ a 5-minute walk away.<br><br>\r\nThe hall is equipped with showers and changing\
   \ rooms, available for use at any time.\r\n"
