Update winteracro content via web editor
Edited by: myrj (noreply@acrofestival.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -1,31 +1,33 @@
 winter_accomodation_address: Chasa Tschlin, Curtins 6, 7559 Tschlin
-winter_accomodation_address_url: https://maps.app.goo.gl/wFy8K6gaSt7ojHde6
-winter_accomodation_description: 'This year we have different sleeping options for
-  you. They are distributed into three facilities in different locations:'
-winter_accomodation_dorms: "This beautifully renovated and huge Chalet is in the town\
-  \ of Langwies, 10 Minutes drive from Arosa's hall. A shuttle bus will be running\
-  \ in the mornings and evenings to get you into town and back home, but you can also\
-  \ take the train through the picturesque landscapes (buy ticket on www.sbb.ch oder\
-  \ via App) or go with you own car (paid parking underneath the hall avaliable)\r\
-  \n<br><br>\r\n <b>Double rooms</b> <br>\r\nAccommodation in spacious rooms with\
-  \ 2 beds (together or separated). This option costs you a bit more but you'll have\
-  \ gueranteed good sleep and some privacy :-) There are spacious and well-maintained\
+winter_accomodation_address_url: https://maps.app.goo.gl/LXpcALwMfqhxdJvXA
+winter_accomodation_description: This year we have different sleeping options for
+  you. They are distributed into two facilities, all within 2 minutes of the training
+  hall.
+winter_accomodation_dorms: "This beautiful Chalet is in the town of Tschlin, 2 Minutes\
+  \ walking distance from our hall. \r\n <b>Double rooms</b> <br>\r\nAccommodation\
+  \ in spacious rooms with 2 beds (together or separated). This option costs you a\
+  \ bit more but you'll have gueranteed good sleep and some privacy :-) Mattresses,\
+  \ pillows/comfy blankets & covers included. There are spacious and well-maintained\
   \ sanitary facilities with shower/toilet cubicles in the corridor and through the\
-  \ whole building.<br>Price: 870 CHF per person\r\n<br><br>\r\n<b>Dormitories 4 people</b><br>\r\
-  \nSpread in the Strela Chalet, each room has its charm. There are mattress, pillows\
-  \ and comfy blankets. Shared bathrooms and showers.\r\n<br>Price: 835 CHF per person\r\
-  \n<br><br>\r\n<b>Dormitories 6 people</b><br>\r\nSpread in the Strela Chalet, each\
-  \ room has its charm. There are mattress, pillows and comfy blankets. Shared bathrooms\
-  \ and showers.<br>\r\nPrice: 800 CHF per person<br><br>\r\n"
-winter_accomodation_dorms_url: https://maps.app.goo.gl/wFy8K6gaSt7ojHde6
-winter_accomodation_extra: "We'll place one sauna in front of the hall, facing some\
-  \ beautiful mountains. The other sauna will be located in front of the House Strela,\
-  \ in Langwies. <br>There are no free parking places for cars in Arosa, but a rather\
-  \ spacious paid parking underneath the hall. We recommend you to come by train and\
-  \ walk 10 minutes or take the free bus from Arosa train station to \"Arosa Rathaus\"\
-  . \r\n<br> There are free parking lots 200m from House Strela, Langwies.\r\n<br>\
-  \ Bring some house shoes for the hall and house. All the meals are in the main hall.\
-  \ \r\n<br> Some snacks and coffee will be provided in House Strela as well.\r\n"
+  \ whole buildings. <br>Price: 755 CHF per person\r\n<br><br>\r\n<b>Dormitories 3\
+  \ people</b><br>\r\nRight in the house of the training hall. Mattresses, pillows/comfy\
+  \ blankets & covers included. Shared bathrooms and showers.\r\n<br>Price: 730 CHF\
+  \ per person\r\n<br><br>\r\n<b>Dormitories 4 people</b><br>\r\nRight in the house\
+  \ of the training hall. Mattresses, pillows/comfy blankets & covers included. Shared\
+  \ bathrooms and showers.\r\n<br>Price: 705 CHF per person\r\n<br><br>\r\n<b>Dormitories\
+  \ 6 people</b><br>\r\nRight in the house of the training hall. Mattresses, pillows/comfy\
+  \ blankets & covers included. Shared bathrooms and showers.<br>\r\nPrice: 680 CHF\
+  \ per person<br><br>\r\nThere is space for a few vans to park in front of the hall.\
+  \ \r\nReach out if you want a no-accomodation option.  <br>Price: 500 CHF per person\r\
+  \n<br><br>\r\n"
+winter_accomodation_dorms_url: https://maps.app.goo.gl/LXpcALwMfqhxdJvXA
+winter_accomodation_extra: "We'll place a sauna in front of the hall, facing some\
+  \ beautiful mountains. <br>There are free parking places for cars right outside\
+  \ Tschlin, 5 minutes walk to the hall. We recommend you to come by train and bus,\
+  \ as there can be a lot of snow in that season of the year. If you decide to come\
+  \ by car, make sure to bring some snow chains for the wheels.\r\n\r\n<br> Bring\
+  \ some house shoes for the hall and house. All the meals are in the main hall. \r\
+  \n\r\n"
 winter_accomodation_hall_url: https://maps.app.goo.gl/wFy8K6gaSt7ojHde6
 winter_accomodation_title: 2025 Sleeping Options
 winter_accomodation_title_dorms: 🌄 <b>House Strela, Langwies</b>
