Update winteracro content via web editor
Edited by: myrj (noreply@acrofestival.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -73,9 +73,9 @@ winter_hall_spa_description: The hall will be equipped with a sauna. The mainten
   will be organized through helping tasks and adjusted according to our needs.
 winter_hall_title: Turnhalle Tschlin
 winter_home_accomodation: "This year we have different sleeping options for you. They\
-  \ are distributed into two facilities in different locations:<br>\r\n<br>- Main\
-  \ House <br>\r\n<br>- Macun House<br>\r\n<br>\r\nCheck the price differences at\
-  \ \"Prices\".\r\n<br>More important details: <br><br>\r\n"
+  \ are distributed into two facilities within 2 walking minutes of the hall:<br>\r\
+  \n<br>- Main House <br>\r\n<br>- Macun House<br>\r\n<br>\r\nCheck the price differences\
+  \ at \"Prices\".\r\n<br>More important details: <br><br>\r\n"
 winter_home_food: "<i>\"We are what we eat\"</i><br>\r\nMain dishes, healthy snacks\
   \ and desserts are<strong> all organic, (mostly) local, vegan and cooked with love</strong>.<br>\
   \ \r\n*<b>Everyone will be asked to colaborate by doing 2 tasks in the kitchen during\
