--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -97,20 +97,19 @@ winter_home_intro: "We're back—and this time, Winter Acro is making a return t
   \ Arosa. With awesome food,  the snow, and the sun, we're going to have so much\
   \ fun this year, and we hope to see many of you for the 8th edition of the Winter\
   \ Acro Festival!\r\n"
-winter_home_location: "Arosa is located in the Plessur Range of the Swiss Alps, within\
-  \ the canton of Graubünden. The area is known for its scenic alpine landscapes and\
-  \ is surrounded by peaks like the Weisshorn (2,653 meters) and Parpaner Rothorn\
-  \ (2,861 meters), making it a popular destination for skiing, hiking, and other\
-  \ mountain activities. A complete description on how to get there can be found in\
-  \ the following link: <br> <br>\r\n"
-winter_home_prices: "All tickets include:<br><br>- Accomodation in one of the three\
-  \ locations <br>- Food <br> - Workshops <br>- Sauna <br>- Mountain lift ticket for\
-  \ the Skiday<br><br>\r\n<strong>Conditions, details and prices:</strong><br> <br>\r\
-  \n"
+winter_home_location: "Tschlin is a traditional mountain village in the Lower Engadin\
+  \ valley of the canton of Graubünden, located near the Austrian border. At around\
+  \ 1,550 meters above sea level, it offers panoramic views over the Inn valley and\
+  \ surrounding alpine peaks. The area is known for its well-preserved Engadin architecture,\
+  \ peaceful atmosphere, and access to scenic hiking and biking trails. The Ski area\
+  \ \"Scuol\" is only a 20min drive away. A complete description on how to get there\
+  \ can be found in the following link: <br> <br>\r\n"
+winter_home_prices: "All tickets (except no-accomodation) include:<br><br>- Accomodation\
+  \ & bedding <br>- Food & Snacks<br> - Workshops <br>- Sauna <br>- Mountain lift\
+  \ ticket for the Skiday<br><br>\r\n<strong>Conditions, details and prices:</strong><br>\
+  \ <br>\r\n"
 winter_home_sauna: "Beaten up from the daily training?<br><br>Daily sauna under the\
-  \ stars! <br>\r\nThere is also a nice natural Iceplunge and Sauna in Arosa that\
-  \ you could visit after the Snow Day. <br>\r\nThere will be one sauna at the hall\
-  \ and one at house Strela.<br>\r\n"
+  \ stars! <br>\r\n<br>\r\n"
 winter_home_schedule: "DON'T MISS THE OPENING!\r\n<br><br>\r\nEVERYDAY: Sauna after\
   \ dinner  and  jam till late late ;)\r\n"
 winter_home_show: "With the help of our teachers and professional artists the show\
@@ -119,34 +118,32 @@ winter_home_show: "With the help of our teachers and professional artists the sh
   \ to the town of Arosa. Its a big event and we want to celebrate it with you all!\r\
   \n"
 winter_home_specialevent: "On Thursday morning we will organize a snow event up on\
-  \ the mountain of the Arosa ski resort (If the weather is good). <br>The transportation\
-  \ to the station is 10min walk or 2min bus ride (free). <br>  \U0001F642<br>Bring\
-  \ warm clothes for outdoor acro. Free afternoon for ski, snowboard or free floor\
-  \ at the hall.<br><br>*As an EXTRA, we could organize ski tickets for you, write\
-  \ us ;).\r\n"
+  \ the mountain of the Scuol ski resort (If the weather is good). <br>The transportation\
+  \ to the station is a 20min drive. <br>  \U0001F642<br>Bring warm clothes for outdoor\
+  \ acro. Free afternoon for ski, snowboard or free floor at the hall.<br><br>*As\
+  \ an EXTRA, we could organize ski tickets for you, write us ;).\r\n"
 winter_home_workshops: "There will be <b>3 rounds of 3 acro workshops per \"acro\"\
   \ day</b>. Expect daily handstand, coaching, morning banquine, and other projects\
-  \ with plenty of space to jam throughout the day. <b>Longes and mats will be available\
-  \ for continuous practice</b>.<br>\r\n<b>Skill Levels</b>:\r\nNo beginner workshops—previous\
+  \ & jams throughout the day. <b>Longes and mats will be available for continuous\
+  \ practice</b>.<br>\r\n<b>Skill Levels</b>:\r\nNo beginner workshops — previous\
   \ acro experience is required.\r\nWorkshops level starts at intermediate with intro-level\
   \ prerequisites for Flows, Icarians, or Standing Acro.\r\n"
 winter_prices_description: "Creating an Event like the Winter Acro is a real Orga\
   \ challenge in many ways - but we love the challenge - and we do all we can to keep\
   \ it as accessible as we can, while still offering all the goodies that make this\
-  \ event special.\r\n<br>\r\n<strong> All tickets include: food, workshops, wellness\
-  \ and snow days ticket.</strong> \r\n<br>\r\nTickets with Accommodation in other\
-  \ town then the Hall include the shuttle. Some tickets go without accommodation\
-  \ but are limited.<br> There are no single day tickets this year, we want everyone\
-  \ to have a full experience of the program we so carefully organized.<br> <br>\r\
-  \n<strong>First round of booking confirmations:<br>\r\n10 November 2024</strong><br>\
-  \ <br>\r\n<strong>  Confirmation conditions:  </strong> <br>\r\nYour spot is confirmed\
-  \ after payment. <br><br>\r\n    <b>Ticket Transfer</b>: You can suggest a transfer\
-  \ of your ticket by email, it will strongly be considered - specially in thigh schedule\
-  \ - but if there is a waiting list we keep the right to give it preference.<br><br>\r\
-  \n\r\n<h2><b>1 CHF = 1€</b></h2><b>To make it easier for our European friends please\
-  \ consider 1 CHF = 1€ </b><br>\r\n"
-winter_prices_full: '8 Days Pass: CHF 730.- per Person in Aula or Hall'
-winter_prices_full_nosleep: '8 Days Pass: CHF 580.- per Person <b>without</b> Accommodation'
+  \ event special.\r\n<br>\r\n<strong> All tickets include: Accomodation & bedding,\
+  \ food, workshops, wellness and snow days ticket.</strong> \r\n<br>\r\nSome tickets\
+  \ go without accommodation but are limited.<br> There are no single day tickets\
+  \ this year, we want everyone to have a full experience of the program we so carefully\
+  \ organized.<br> <br>\r\n<strong>First round of booking confirmations:<br>\r\n10\
+  \ December 2025</strong><br> <br>\r\n<strong>  Confirmation conditions:  </strong>\
+  \ <br>\r\nYour spot is confirmed after payment. <br><br>\r\n    <b>Ticket Transfer</b>:\
+  \ You can suggest a transfer of your ticket by email, it will strongly be considered\
+  \ - specially in thigh schedule - but if there is a waiting list we keep the right\
+  \ to give it preference.<br><br>\r\n\r\n<h2><b>1 CHF = 1€</b></h2><b>To make it\
+  \ easier for our European friends please consider 1 CHF = 1€ </b><br>\r\n"
+winter_prices_full: '6 Days Pass: CHF 730.- per Person in 3 pax Dorm'
+winter_prices_full_nosleep: '6 Days Pass: CHF 500.- per Person <b>without</b> Accommodation'
 winter_prices_refunds: "<strong>Cancellation Policy - In case <u>you</u> cancel.</strong><br>\r\
   \nIn case of cancellation, the following costs are charged: <br>: \r\nUp to 30 days\
   \ prior to the event: CHF 90.- fixed cost <br>\r\n30 to 15 days prior to the event:\
@@ -159,38 +156,32 @@ winter_prices_refunds: "<strong>Cancellation Policy - In case <u>you</u> cancel.
   \nWe are going to <strong> make a full refund</strong>.<br>\r\n<strong> b) </strong>\
   \ with accommodation in Dorms: Fixed fee CHF 90.-  per Person (non-refundable) <br>\
   \ <br>"
-winter_prices_short: '<b>NEW 6 Days Pass </b>House Strela Langwies: CHF 650.- Double
-  Room, CHF 625.- Dorm 4er , CHF 600.- Dorm 6er; per Person.'
-winter_prices_single: '8 Days Pass House Strela Langwies: CHF 870.- Double Room, CHF
-  835.- Dorm 4er , CHF 800.- Dorm 6er; per Person.'
-winter_prices_upgrade1: '8 Days Pass Pfadiheim Arosa: CHF 820.- per Person in 10er
-  Room'
+winter_prices_short: '6 Days Pass: CHF 755.- per person in Double Room'
+winter_prices_single: '6 Day Pass: CHF 705.- in 4 pax Dorm'
+winter_prices_upgrade1: '6 Day Pass: CHF 680.- per person in 6 pax Dorm'
 winter_prices_upgrade2: "<strong>No day passes available this year</strong><br><br>\r\
   \n<strong>Price reduction: </strong> <br>\r\n-You can apply for a Helper Ticket.\
   \ (30% reduction on the regular Festival Ticket)<br>\r\n-You can apply to teach\
   \ a Workshop at the Festival (Payout: CHF 70.- per Teacher/Workshop)<br><br>\r\n"
-winter_transportation_car: "<p>Once you arrive in Zürich, continue on the A3 motorway\
-  \ heading towards Chur. After reaching Landquart, switch to route 28, which leads\
-  \ you directly to Arosa. The drive takes you along a stunning alpine route, winding\
-  \ through picturesque mountain scenery. After leaving the motorway, the road becomes\
-  \ steeper and more serpentine as you begin the climb up to Arosa, with 365 hairpin\
-  \ bends and breathtaking views along the way. Be mindful of the weather, especially\
-  \ in winter—snow chains or a 4x4 vehicle might be necessary if the roads are icy.\
-  \ The ascent is part of the adventure, and once you reach Arosa, the panoramic alpine\
-  \ beauty makes it all worthwhile!</p>\r\n"
-winter_transportation_car_time: "<ul>\r\n<li>Berne – Arosa: 3h 15min</li>\r\n<li>Basel\
-  \ – Arosa: 3h</li>\r\n<li>Geneva – Arosa: 5h</li>\r\n<li>Zurich – Arosa: 2h</li>\r\
+winter_transportation_car: "<p>Once you arrive in Zürich, take the A3 motorway toward\
+  \ Chur, then follow the A13 to Landquart. From there, continue on route 28 toward\
+  \ Klosters, where you’ll load your car onto the Vereina car train for a quick ride\
+  \ through the mountain tunnel to Sagliains in the Lower Engadin. After exiting the\
+  \ tunnel, follow the road past Scuol and Strada, then take the mountain road up\
+  \ to Tschlin. The journey offers spectacular alpine views and a touch of adventure.\
+  \ In winter, check road and train conditions—snow chains or a 4x4 vehicle may be\
+  \ required for the final ascent. The tranquil charm of Tschlin makes the trip unforgettable!</p>\r\
+  \n"
+winter_transportation_car_time: "<ul>\r\n<li>Berne – Arosa: 4h</li>\r\n<li>Basel –\
+  \ Arosa: 4h</li>\r\n<li>Geneva – Arosa: 5h 30min</li>\r\n<li>Zurich – Tschlin: 3h</li>\r\
   \n</ul>\r\n"
 winter_transportation_tickets: <p>Tickets can be bought in the Swiss Main Trains system,
   but it's worth to check other options.</p>
-winter_transportation_train: "<p>\r\nThe picturesque destination Arosa is nestled\
-  \ in the Swiss Alps at an altitude of 1,800 meters. To reach this charming spot,\
-  \ travelers from the North can follow the scenic train route through Switzerland\
-  \ (via Landquart, Chur, and on to Arosa). Alternatively, for those coming through\
-  \ Austria, the journey can start with the Bratislava train (passing through Landeck-Zams,\
-  \ then crossing the border into Switzerland before continuing to Arosa). Both options\
-  \ offer stunning alpine landscapes and an unforgettable travel experience.</p>\r\
-  \n"
-winter_transportation_train_time: "<ul>\r\n<li>Zurich – Chur - Arosa: 2h 30min</li>\r\
-  \n<li>Basel - Chur - Arosa: 4h</li>\r\n<li>Geneva – Zürich – Chur – Arosa: 6h </li>\r\
-  \n<li>Berne – Zürich - Chur - Arosa: 4h</li>\r\n</ul>\r\n"
+winter_transportation_train: "<p>\r\nThe picturesque destination Tschlin is nestled\
+  \ in the Swiss Alps. To reach this charming spot, travelers from the Zürich can\
+  \ follow the scenic train route through Switzerland (via Landquart, Scuol, and on\
+  \ to Tschlin). </p>\r\n"
+winter_transportation_train_time: "<ul>\r\n<li>Zurich – Landquart - Scuol - Tschlin:\
+  \ 3h 20min</li>\r\n<li>Basel - Landquart - Scuol - Tschlin: 4h 20min</li>\r\n<li>Geneva\
+  \ – Zürich – Landquart – Scuol - Tschlin: 6h 20min </li>\r\n<li>Berne – Zürich -\
+  \ Landquart - Scuol - Tschlin: 4h 30min</li>\r\n</ul>\r\n"
