Update winteracro content via web editor
Edited by: myrj (noreply@acrofestival.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -94,7 +94,7 @@ winter_home_intro: "We're back—and this time, Winter Acro is making a return t
   \ you can count on many of our favorite acrobatics teachers and friends from all\
   \ over the world gathered in one spot!\r\n\r\n<br><br> Expect a week of high-level\
   \ partner acrobatics, Icarian, Acroyoga and dynamic acrobatics workshops in beautiful\
-  \ Arosa. With awesome food,  the snow, and the sun, we're going to have so much\
+  \ Tschlin. With awesome food,  the snow, and the sun, we're going to have so much\
   \ fun this year, and we hope to see many of you for the 8th edition of the Winter\
   \ Acro Festival!\r\n"
 winter_home_location: "Tschlin is a traditional mountain village in the Lower Engadin\
