Update winteracro content via web editor
Edited by: myrj (noreply@acrofestival.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -93,8 +93,8 @@ winter_home_prices: "All tickets (except no-accomodation) include:<br><br>- Acco
   \ & bedding <br>- Food & Snacks<br> - Workshops <br>- Sauna <br>- Mountain lift\
   \ ticket for the Skiday<br><br>\r\n<strong>Conditions, details and prices:</strong><br>\
   \ <br>\r\n"
-winter_home_sauna: "Beaten up from the daily training?<br><br>Daily sauna under the\
-  \ stars! <br>\r\n<br>\r\n"
+winter_home_sauna: "Beaten up from the daily training?<br>Daily sauna under the stars!\
+  \ <br>\r\n<br>\r\n"
 winter_home_schedule: "DON'T MISS THE OPENING!\r\n<br><br>\r\nEVERYDAY: Sauna after\
   \ dinner  and  jam till late late ;)\r\n"
 winter_home_show: "With the help of our teachers and professional artists the show\
@@ -107,12 +107,12 @@ winter_home_specialevent: "On Thursday morning we will organize a snow event up 
   \ to the station is a 20min drive. <br>  \U0001F642<br>Bring warm clothes for outdoor\
   \ acro. Free afternoon for ski, snowboard or free floor at the hall.<br><br>*As\
   \ an EXTRA, we could organize ski tickets for you, write us ;).\r\n"
-winter_home_workshops: "There will be <b>3 rounds of 3 acro workshops per \"acro\"\
-  \ day</b>. Expect daily handstand, coaching, morning banquine, and other projects\
-  \ & jams throughout the day. <b>Longes and mats will be available for continuous\
-  \ practice</b>.<br>\r\n<b>Skill Levels</b>:\r\nNo beginner workshops — previous\
-  \ acro experience is required.\r\nWorkshops level starts at intermediate with intro-level\
-  \ prerequisites for Flows, Icarians, or Standing Acro.\r\n"
+winter_home_workshops: "There will be <b>3 acro workshops per \"acro\" day</b>. Expect\
+  \ daily handstand, coaching, and other projects & jams throughout the day. <b>Longes\
+  \ and mats will be available for continuous practice</b>.<br>\r\n<b>Skill Levels</b>:\r\
+  \nNo beginner workshops — previous acro experience is required.\r\nWorkshops level\
+  \ starts at intermediate with intro-level prerequisites for Flows, Icarians, or\
+  \ Standing Acro.\r\n"
 winter_prices_description: "Creating an Event like the Winter Acro is a real Orga\
   \ challenge in many ways - but we love the challenge - and we do all we can to keep\
   \ it as accessible as we can, while still offering all the goodies that make this\
