Update winteracro content via web editor
Edited by: myrj (noreply@acrofestival.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -26,13 +26,7 @@ winter_accomodation_dorms: "<b>Double rooms</b> <br>\r\nAccommodation in spaciou
   \ bring some snow chains for the wheels.\r\n\r\n<br> Bring some house shoes for\
   \ the hall and house. All the meals are in the main hall. \r\n"
 winter_accomodation_dorms_url: https://maps.app.goo.gl/LXpcALwMfqhxdJvXA
-winter_accomodation_extra: "We'll place a sauna in front of the hall, facing some\
-  \ beautiful mountains. <br>There are free parking places for cars right outside\
-  \ Tschlin, 5 minutes walk to the hall. We recommend you to come by train and bus,\
-  \ as there can be a lot of snow in that season of the year. If you decide to come\
-  \ by car, make sure to bring some snow chains for the wheels.\r\n\r\n<br> Bring\
-  \ some house shoes for the hall and house. All the meals are in the main hall. \r\
-  \n\r\n"
+winter_accomodation_extra: "\r\n"
 winter_accomodation_hall_url: https://maps.app.goo.gl/wFy8K6gaSt7ojHde6
 winter_accomodation_title: 2026 Sleeping Options
 winter_accomodation_title_dorms: 🌄 <b>Get some good sleep in comfy beds!</b>
