Update winteracro content via web editor
Edited by: myrj (noreply@acrofestival.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -122,7 +122,7 @@ winter_prices_description: "Creating an Event like the Winter Acro is a real Org
   \ this year, we want everyone to have a full experience of the program we so carefully\
   \ organized.<br> <br>\r\n<strong>First round of booking confirmations:<br>\r\n10\
   \ December 2025</strong><br> <br>\r\n<strong>  Confirmation conditions:  </strong>\
-  \ <br>\r\nYour spot is confirmed after payment. <br><br>\r\n    <b>Ticket Transfer</b>:\
+  \ <br>\r\nYour spot is confirmed after pre-payment. <br><br>\r\n    <b>Ticket Transfer</b>:\
   \ You can suggest a transfer of your ticket by email, it will strongly be considered\
   \ - specially in thigh schedule - but if there is a waiting list we keep the right\
   \ to give it preference.<br><br>\r\n\r\n<h2><b>1 CHF = 1€</b></h2><b>To make it\
