Update winteracro content via web editor
Edited by: myrj (noreply@acrofestival.com)

--- a/config/snippets/winteracro.yml
+++ b/config/snippets/winteracro.yml
@@ -45,7 +45,8 @@ winter_acro_header_location: <h2><b>Winter Acro Tschlin</b></h2>
 winter_general_date: 2. March - 7. March  2026
 winter_general_fb: https://www.facebook.com/events/684181852070040/
 winter_general_title: 8th Winter Acro Festival
-winter_general_whatsapp: <a href="https://chat.whatsapp.com/HFTYA44B5GmJljVFb7vwLG">Winteracro2024</a>
+winter_general_whatsapp: "<a href=\"https://chat.whatsapp.com/K9HVd5mJ8iCJujCh63stJb\"\
+  >Winteracro2026</a>\r\n\r\n"
 winter_hall_address_url: https://maps.app.goo.gl/LXpcALwMfqhxdJvXA
 winter_hall_description: "The beautifully renovated wooden Hall with a little stage\
   \ will be our training space for a week. Lunch and dinner will be served here for\
